--- a/src/App.css
+++ b/src/App.css
@@ -40,3 +40,19 @@
   font-size: 15px;
   color:#F9E142;
 }
+
+.welcome{
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+}
+
+button{
+  background-color: #e5e5e5;
+  width: 200px;
+  height: 40px;
+  border-radius: 6px;
+  color: #282c34;
+  font-size: 20px;
+}
