--- a/src/App.css
+++ b/src/App.css
@@ -20,7 +20,7 @@
 
 .container_pai{
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   align-items: center;
   justify-content: space-around;
   width: 80vw;
@@ -54,5 +54,11 @@ button{
   height: 40px;
   border-radius: 6px;
   color: #282c34;
-  font-size: 20px;
+  font-size: 15px;
+}
+
+@media (min-width: 860px){
+.container_pai{
+  flex-direction: row;
+}
 }
